# MicroProcessorExercise

./: .gitignore  README.md
final-project/: README.md
final-project/Segment_test/app/src/main/: AndroidManifest.xml
final-project/Segment_test/app/src/main/cpp/: CMakeLists.txt  native-lib.c
final-project/Segment_test/app/src/main/java/com/mp/segment_test/: MainActivity.java
final-project/Segment_test/app/src/main/res/layout/: activity_main.xml
final-project/hsv/gpu/: Makefile  kernel_hsv  kernel_hsv.cl  kernel_hsv.cpp
final-project/jaesun_final/: install_module.bat  push_cl.bat
final-project/jaesun_final/app/src/main/: AndroidManifest.xml
final-project/jaesun_final/app/src/main/cpp/: CMakeLists.txt  board_io.c  gpio_button.c  hsv.c  image.cl  image.cpp  led.c  seven_segment.c  target_board_devices.c  threshold.c
final-project/jaesun_final/app/src/main/java/com/mp/jaesun_final/: BoardIO.java  CaliActivity.java  DoGpioButtonClicked.java  GpioButton.java  Led.java  MainActivity.java  MyBitmap.java  MyCamera.java  PlayActivity.java  Player.java  Ranking.java  SevenSegment.java  SoundManager.java  TestActivity.java
final-project/jaesun_final/app/src/main/java/com/mp/jaesun_final/helper/: FlagState.java  MyBitmap.java  Question.java  Ranking.java
final-project/jaesun_final/app/src/main/java/com/mp/jaesun_final/ioDevices/: BoardIO.java  BoardIoDevice.java  DoGpioButtonClicked.java  GpioButton.java  Led.java  SevenSegment.java  SoundManager.java
final-project/jaesun_final/app/src/main/res/layout/: activity_cali.xml  activity_main.xml  activity_play.xml  activity_result.xml  activity_test.xml
final-project/segment/app/: Makefile  sm9s5422_segment_test  sm9s5422_segment_test.c
final-project/segment/device_driver/: Makefile  sm9s5422_segment.c  sm9s5422_segment_js.c
week10/Camera_API/app/src/main/: AndroidManifest.xml
week10/Camera_API/app/src/main/java/com/example/camera_api/: CameraPreview.java  MainActivity.java
week10/Camera_API/app/src/main/res/layout/: activity_main.xml
week11/: Makefile  Vadd  Vadd.c  Vadd.cl
week11+/: Blur.cl  GaussianBlur.c  GaussianBlurGPU.cpp  ImageProcessing.h  Makefile  Run.txt
week11+/GaussianBlur_template/cpu/: GaussianBlur  GaussianBlur.c
week11+/GaussianBlur_template/gpu/: Blur.cl  GaussianBlurGPU  GaussianBlurGPU.cpp  Makefile
week11+/grayAndRotate/cpu/: Makefile  grayAndRotate  grayAndRotate.c
week11+/grayAndRotate/gpu/: Makefile  grayAndRotateGpu  grayAndRotateGpu.cpp  grayAndRotateKernel.cl
week12/: Blur.cl
week12/Gaussian_Blur_JNI/app/src/main/: AndroidManifest.xml
week12/Gaussian_Blur_JNI/app/src/main/cpp/: CMakeLists.txt  OpenCLDriver_.cpp
week12/Gaussian_Blur_JNI/app/src/main/java/com/example/gaussian_blur_jni/: MainActivity.java
week12/Gaussian_Blur_JNI/app/src/main/res/layout/: activity_main.xml
week2/: a.out  first.c  makefile  second.c
week2/exercise/: a.c  a.out  b.c  hello  hello.c  makefile  week2_exercise
week3/app/: Makefile  sm9s5422_led_test  sm9s5422_led_test.c
week3/device_driver/: Makefile  sm9s5422_led.c
week4/app/: sm9s5422_segment_test  sm9s5422_segment_test.c
week4/device_driver/: Makefile  sm9s5422_segment.c
week5/app/: Makefile  sm9s5422_interrupt_test  sm9s5422_interrupt_test.c
week5/device_driver/: Makefile  sm9s5422_interrupt.c
week6/HelloWorld_Android/app/src/main/: AndroidManifest.xml
week6/HelloWorld_Android_/app/src/main/: AndroidManifest.xml
week6/HelloWorld_Android_/app/src/main/java/com/example/helloworld_android_/: MainActivity.java
week6/Hello_JNI/app/src/main/: AndroidManifest.xml
week6/Hello_JNI/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
week6/Hello_JNI/app/src/main/java/com/example/hello_jni/: MainActivity.java
week6/LED_example/app/src/main/: AndroidManifest.xml
week6/LED_example/app/src/main/cpp/: CMakeLists.txt  JNIDriver.c  native-lib.cpp
week6/LED_example/app/src/main/java/com/example/led_example/: MainActivity.java
week6/LED_example/app/src/main/res/layout/: activity_main.xml
week6/New_LED_Test/app/src/main/: AndroidManifest.xml
week6/New_LED_Test/app/src/main/cpp/: CMakeLists.txt  JNIDriver.c
week6/New_LED_Test/app/src/main/java/com/example/new_led_test/: MainActivity.java
week6/New_LED_Test/app/src/main/res/layout/: activity_main.xml
week6/Print_my_string/app/src/main/: AndroidManifest.xml
week6/Print_my_string/app/src/main/java/com/example/print_my_string/: MainActivity.java
week8/ThreadExample/app/src/main/java/com/example/threadexample/: MainActivity.java
week8/segment/app/src/main/: AndroidManifest.xml
week8/segment/app/src/main/cpp/: CMakeLists.txt  segment.c
week8/segment/app/src/main/java/com/example/segment/: MainActivity.java
week8/segment/app/src/main/res/layout/: activity_main.xml
week9/ButtonInterrupt/app/src/main/: AndroidManifest.xml
week9/ButtonInterrupt/app/src/main/cpp/: CMakeLists.txt  JniDriver.c
week9/ButtonInterrupt/app/src/main/java/com/example/buttoninterrupt/: IJniListener.java  JniDriver.java  MainActivity.java
week9/ButtonInterrupt/app/src/main/res/layout/: activity_main.xml
